# project-c-

./: CMakeLists.txt  README.md
includ/: VideoProcessor.h
src/: VideoProcessor.cpp  main.cpp
